fixed bg gradient appearing on mobile

--- a/assets/styles/styles-landing.css
+++ b/assets/styles/styles-landing.css
@@ -618,6 +618,8 @@ small, .font_small {font-size: 0.75em;}
   }
  }
 
+@media (min-width: 768px) {
+
 .hero__cards-wrapper{
       background: -webkit-gradient(
         linear,
@@ -627,10 +629,9 @@ small, .font_small {font-size: 0.75em;}
       background: linear-gradient(
         to bottom,
         rgba(135,204,47,1) 67%,rgba(255,255,255,1) 68%
-        );
-    
-    
+        )
   }
+ }
 
 .hero__card {
     -webkit-clip-path: polygon(0 20%, 1600px 0, 1600px 80%, 0 100%);
@@ -836,7 +837,6 @@ small, .font_small {font-size: 0.75em;}
 @media (min-width: 1024px) {
 
 .footer__wrapper {
-      background-color: #fff;
       background: -webkit-linear-gradient(top, rgba(255,255,255,1) 49%,rgba(135,204,47,1) 49%)
     
   }
